--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # _data/navigation.yml
-- title: Propel Task 1.1
+- title: Propel 1.1
   url: /propel-1.1/
-- title: Propel Task 1.2
+- title: Propel 1.2
   url: /propel-1.2/
+- title: Propel 1.4
+  url: /propel-1.4/
